# OpenGL-CPP

./: .gitignore  CMakeLists.txt  main.cpp  vcpkg.json
core/components/: BaseComponent.cpp  BaseComponent.h  Component.cpp  Component.h  Cube.h  GltfModel.h  MeshRenderer.cpp  MeshRenderer.h  Model.h  Plane.cpp  Plane.h  RenderComponent.cpp  RenderComponent.h  Shape.cpp  Shape.h  Sprite.cpp  Sprite.h
core/materials/: PBRMaterial.h  SingleMaterial.h  TextureMaterial.cpp  TextureMaterial.h
core/materials/shaders/: pbr.frag
core/renderer/: Camera.cpp  Camera.h  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
core/scene/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  Node.cpp  Node.h  Scene.cpp  Scene.h
core/scene/shaders/: default.frag  default.vert  light.frag  light.vert  single.frag  single.vert
core/utils/: ObjParser.h
glad/include/glad/: glad.h
glad/src/: glad.c
libs/glfw/src/: mappings.h
test/shaders/: default.frag  default.vert
